# checkauto

./: .travis.yml  CMakeLists.txt  README.md  SugoiDekai.cpp  SugoiDekai.h  main.cpp
